# minirepo

./: .bazeliskrc  .envrc  BUILD.bazel  MODULE.bazel  WORKSPACE  go.mod  go.sum  requirements_lock.txt
proto/: BUILD.bazel  portal.proto
services/app/: BUILD.bazel  deployment.yaml  main.go
services/client/: BUILD.bazel  main.go
services/lib/helloworld/: BUILD.bazel  helloworld.go
services/python/: BUILD.bazel  deployment.yaml  service.py  test.yaml
tools/: bazel  go  gopackagesdriver.sh
