####
# General support
bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")

####
# Go
include("//build/modules:go.MODULE.bazel")
##

####
# Python
include("//build/modules:python.MODULE.bazel")
##

####
# OCI containers
include("//build/modules:oci.MODULE.bazel")
##

####
# Packages, tar and the such
include("//build/modules:packages.MODULE.bazel")
##

####
# Protobuf
include("//build/modules:protobuf.MODULE.bazel")
##
