load("@rules_go//proto:def.bzl", "go_grpc_library", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "portal_proto_proto",
    srcs = ["portal.proto"],
    visibility = ["//visibility:public"],
)

# go_proto_library(
#     name = "portal_proto_go_proto",
#     importpath = "uno/proto",
#     proto = ":portal_proto_proto",
#     visibility = ["//visibility:public"],
# )

go_proto_library(
    name = "portal_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "uno/proto",
    proto = ":portal_proto_proto",
    visibility = [
        "//visibility:public",
    ],
)
