load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

oci_push(
    name = "push_image",
    image = ":image",
    remote_tags = ["latest"],
    repository = "registry.vms.polymath-solutions.com:443/uno/image",
)

pkg_tar(
    name = "app_layer",
    srcs = [":app"],
    # If the binary depends on RUNFILES, uncomment the attribute below.
    # include_runfiles = True
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/app"],
    tars = [":app_layer"],
)

go_library(
    name = "app_lib",
    srcs = ["main.go"],
    importpath = "uno/services/app",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:portal_go_proto",
        "//services/lib/helloworld",
        "@com_github_gofiber_fiber//:fiber",
        "@com_github_google_uuid//:uuid",
        "@com_github_lmittmann_tint//:tint",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)

go_binary(
    name = "app",
    embed = [":app_lib"],
    visibility = ["//visibility:public"],
)
